--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
 			<artifactId>validation-api</artifactId>
 			<version>${validation-api-version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.javamoney</groupId>
+			<artifactId>moneta</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
